{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 92,
  "lineage": "b22e4aa7-ca84-e1bf-c58b-e6ea739f0437",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "akamai_app_instance_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00448a337adc93c05",
            "arn": "arn:aws:ec2:us-west-2:739865653623:instance/i-08c343940f629d01a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c343940f629d01a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virgilio-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07078951c32c8d4b1",
            "private_dns": "ip-192-168-0-13.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.13",
            "public_dns": "ec2-34-220-229-59.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.229.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01db8250f4222355e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01455b222134a94b1",
            "tags": {
              "Name": "Akamai DB - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai DB - Test by Virgilio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aade195981bdf147"
            ]
          },
          "dependencies": [
            "aws_security_group.akamai_app_sg",
            "aws_subnet.akamai_app_subnet",
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "akamai_app_instance_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00448a337adc93c05",
            "arn": "arn:aws:ec2:us-west-2:739865653623:instance/i-09bad1cfecbba6fe7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bad1cfecbba6fe7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virgilio-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b0257bf0179739d3",
            "private_dns": "ip-192-168-0-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-34-209-72-40.us-west-2.compute.amazonaws.com",
            "public_ip": "34.209.72.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a34ca81f91b8c189",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01455b222134a94b1",
            "tags": {
              "Name": "Akamai LB - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai LB - Test by Virgilio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aade195981bdf147"
            ]
          },
          "dependencies": [
            "aws_security_group.akamai_app_sg",
            "aws_subnet.akamai_app_subnet",
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "akamai_app_instance_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00448a337adc93c05",
            "arn": "arn:aws:ec2:us-west-2:739865653623:instance/i-09d1938188a8c9dfd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d1938188a8c9dfd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virgilio-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ab93aa070668ac8",
            "private_dns": "ip-192-168-0-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.12",
            "public_dns": "ec2-34-216-220-79.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.220.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d89316352516b4f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01455b222134a94b1",
            "tags": {
              "Name": "Akamai WEB - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai WEB - Test by Virgilio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aade195981bdf147"
            ]
          },
          "dependencies": [
            "aws_security_group.akamai_app_sg",
            "aws_subnet.akamai_app_subnet",
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "akamai_app_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739865653623:internet-gateway/igw-033111ccfa3131d6f",
            "id": "igw-033111ccfa3131d6f",
            "owner_id": "739865653623",
            "tags": {
              "Name": "Akamai Internet Gateway - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai Internet Gateway - Test by Virgilio"
            },
            "vpc_id": "vpc-0e3fb46019cecb800"
          },
          "dependencies": [
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "akamai_app_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739865653623:route-table/rtb-05b608dc42a8b9eb7",
            "id": "rtb-05b608dc42a8b9eb7",
            "owner_id": "739865653623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033111ccfa3131d6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Akamai Route Table - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai Route Table - Test by Virgilio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3fb46019cecb800"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.akamai_app_gw",
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "akamai_app_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c92645ff1f3fa8db",
            "route_table_id": "rtb-05b608dc42a8b9eb7",
            "subnet_id": "subnet-01455b222134a94b1"
          },
          "dependencies": [
            "aws_internet_gateway.akamai_app_gw",
            "aws_route_table.akamai_app_route_table",
            "aws_subnet.akamai_app_subnet",
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "akamai_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739865653623:security-group/sg-0aade195981bdf147",
            "description": "Security group for Akamai Three Tiered Application - Test by Virgilio",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aade195981bdf147",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "akamai_app_sg",
            "name_prefix": "",
            "owner_id": "739865653623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Akamai Security Group - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai Security Group - Test by Virgilio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3fb46019cecb800"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "akamai_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739865653623:subnet/subnet-01455b222134a94b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01455b222134a94b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739865653623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Akamai Application Subnet - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai Application Subnet - Test by Virgilio"
            },
            "vpc_id": "vpc-0e3fb46019cecb800"
          },
          "dependencies": [
            "aws_vpc.akamai_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "akamai_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:739865653623:vpc/vpc-0e3fb46019cecb800",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b0f9fa9c71cc863d",
            "default_route_table_id": "rtb-0743e29f5ed6a7e96",
            "default_security_group_id": "sg-0d62320b9fcd5a0ad",
            "dhcp_options_id": "dopt-07caf563a03f984f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3fb46019cecb800",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0743e29f5ed6a7e96",
            "owner_id": "739865653623",
            "tags": {
              "Name": "Akamai Three Tiered Application VPC - Test by Virgilio"
            },
            "tags_all": {
              "Name": "Akamai Three Tiered Application VPC - Test by Virgilio"
            }
          }
        }
      ]
    }
  ]
}